syntax = "proto3";

package system.project;

import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";

import "system.proto";

option go_package = "github.com/quarkloop/quarkloop/service/v1/system/project";

service ProjectService {
	// query
	rpc GetProjectById(GetProjectByIdQuery) returns (GetProjectByIdReply) {}
	rpc GetProjectVisibilityById(GetProjectVisibilityByIdQuery)returns  (GetProjectVisibilityByIdReply) {}
	rpc GetProjectList(GetProjectListQuery) returns (GetProjectListReply) {}

	// mutation
	rpc CreateProject(CreateProjectCommand) returns (CreateProjectReply) {}
	rpc UpdateProjectById(UpdateProjectByIdCommand) returns (google.protobuf.Empty) {}
	rpc DeleteProjectById(DeleteProjectByIdCommand) returns (google.protobuf.Empty) {}
}

message GetProjectByIdQuery { 
  int32 orgId = 1;
  int32 workspaceId = 2;
  int32 projectId = 3;
}
message GetProjectByIdReply {
  Project project = 1;
}

message GetProjectVisibilityByIdQuery {
  int32 orgId = 1;
  int32 workspaceId = 2;
  int32 projectId = 3;
}
message GetProjectVisibilityByIdReply {
  int32 visibility = 1;
}

message GetProjectListQuery {
  repeated int32 projectIdList = 2;
  int32 visibility = 3;
}
message GetProjectListReply {
  repeated Project projectList = 1;
}

message CreateProjectCommand {
  int32 orgId = 1;
  int32 workspaceId = 2;
  string createdBy = 3;
  string scopeId = 4;
  string name = 5;
  string description = 6;
  int32 visibility = 7;
}
message CreateProjectReply {
  Project project = 1;
}

message UpdateProjectByIdCommand {
  int32 orgId = 1;
  int32 workspaceId = 2;
  int32 projectId = 3;
  string updatedBy = 4;
  string scopeId = 5;
  string name = 6;
  string description = 7;
  int32 visibility = 8;
}

message DeleteProjectByIdCommand {
  int32 orgId = 1;
  int32 workspaceId = 2;
  int32 projectId = 3;
}
